--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Deden Istiawan-Institut Teknologi Statistika dan Bisnis Muhammadiyah" />
+<meta name="author" content="Nanda Zhafran Mahendra-Institut Teknologi Statistika dan Bisnis Muhammadiyah" />
 
 <meta name="date" content="2025-01-02" />
 
